# buildeploy

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  build_for_cmake.sh  build_vcpkg.sh  release.yml  vcpkg.json
.github/workflows/: build-deploy.yml  cmake-single-platform.yml  hosted-ninja-vcpkg-install.yml  hosted-pure-workflow.yml  main.yml  upload-to-release-win.yml
.github/workflows/properties/: hosted-ninja-vcpkg_submod.properties.json
cmakepresets/: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: list.hpp
src/: lib.cpp  main.cpp
test/: testlist.cpp
